--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc -b && node dist/bundle.js",
+    "start": "tsc -b && node dist/index.js",
     "build": "webpack",
     "build:watch": "webpack --watch"
   },
