--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,15 @@ jobs:
 
     - name: Verify Pushed Image
       run: docker pull abhishekjaglan/codemerge:latest # replace with your Docker Hub username and repository
+
+    - name: Deploy to EC2
+      uses: appleboy/ssh-actions@master
+      with: 
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        scripts: |
+          sudo docker pull abhishekjaglan/codemerge:latest
+          sudo docker stop codemergeContainer || true
+          sudo docker rm codemergeContainer || true
+          sudo docker run -d --name codemergeContainer -p 3005:3000 abhishekjaglan/codemerge:latest
