--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       run: docker pull abhishekjaglan/codemerge:latest # replace with your Docker Hub username and repository
 
     - name: Deploy to EC2
-      uses: appleboy/ssh-actions@master
+      uses: appleboy/ssh-action@mster
       with: 
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
