--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_KEY }}
-        scripts: |
+        script: |
           sudo docker pull abhishekjaglan/codemerge:latest
           sudo docker stop codemergeContainer || true
           sudo docker rm codemergeContainer || true
